# smithery-cookbook

./: .gitignore  README.md
clients/typescript/simple-oauth/: README.md  package-lock.json  package.json  setup.md
servers/python/fastmcp_advanced/: Dockerfile  README.md  main.py
servers/python/fastmcp_quickstart/: Dockerfile  README.md  main.py
servers/python/fastmcp_with_session_config/: pyproject.toml
servers/python/migrate_stdio_to_http/: Dockerfile  README.md  main.py  middleware.py  pyproject.toml  smithery.yaml
servers/python/migrate_stdio_to_http/fastmcp/: Dockerfile  main.py  middleware.py
servers/python/migrate_stdio_to_http/middleware/: __init__.py
servers/python/migrate_stdio_to_http/src/: main.py
servers/python/quickstart/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  smithery.yaml
servers/python/quickstart/src/calculator/: __init__.py  server.py
servers/python/quickstart/src/character_counter/: __init__.py  server.py
servers/python/server_with_session_config/: README.md  main.py  smithery.yaml
servers/typescript/custom_container/: package.json  tsconfig.json
servers/typescript/custom_container/src/: index.ts  middleware.ts
servers/typescript/quickstart/: .gitignore  package.json  tsconfig.json
servers/typescript/quickstart/src/: http-server.ts  index.ts
servers/typescript/server_with_session_config/: .gitignore
servers/typescript/typescript_custom/: .gitignore  Dockerfile  README.md  package-lock.json  smithery.yaml
servers/typescript/typescript_quickstart/: README.md  package-lock.json
(+23 files in other folders)
